2005-10-29  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/input/Input.cpp: fix the check for control keys, so that pasting works. Preferrably, we would like to catch some kind of "paste" event from the WM, but I haven't had time to look into it proper.
	* NEWS: update the news

2005-10-29  Erik Hjortsberg  <erik@katastrof.nu>

	*  src/components/ogre/EmberPhysicalEntity.*, src/components/ogre/model/Model.*: reneabled the playing of animations at actions

2005-10-29  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/Widget.*, src/components/ogre/widgets/JesusEdit.cpp, src/components/ogre/GUIManager.* : moved the layout path method to GUIManager	

2005-10-28  Erik Hjortsberg  <erik@katastrof.nu>

	* src/framework/binreloc.c: include config.h
	* src/components/ogre/widgets/Widget.*, src/components/ogre/widgets/JesusEdit.cpp: added method for getting the path to the layout files	
	* src/components/ogre/Makefile.am: cleaned up the file

2005-10-27  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/environment/Sky.*, src/components/ogre/environment/Sun.h, src/components/ogre/input/Input.h, src/components/ogre/JesusMousePicker.h: use the sigc 2.0 methods, which allows us to use the very nice sigc::trackable class and doesn't require all classes to inherit from SigC::Object

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/Makefile.am: also install cegui config files
	* src/components/ogre/cegui/datafiles/cegui.config,  src/components/ogre/cegui/datafiles/CEGUIConfig.xsd: some basic config files

2005-10-26  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/widgets/Performance.cpp: Show the amount of queued sight ops as a value of lag
	* src/components/ogre/widgets/ServerWidget.*: get the list of available avatar types from eris
	* src/components/ogre/widgets/Widget.cpp, src/components/ogre/widgets/Makefile.am: place the widget layouts in a place more consistent with how cegui wants it
